# rag_project_superprof

./: .env.example  README.md  config.example.yml  config.yml  pyproject.toml  requirements-extras.txt  requirements.txt  sitecustomize.py
reports/: comparison.md
scripts/: compare_techniques.py
src/preprocessing/: __init__.py  chunking.py  cli.py  config.py  documents.py  extraction.py  ocr.py  options.py  preflight.py  rerank.py  utils.py  vectorstore.py
src/preprocessing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
